# quacktrader

./: README.rst  pyproject.toml
quacktrader/: backtesting_example.py  best_available_trades.py  buy_unit_puts.py  constants.py  example.py  get_balance.py  get_volatility_stats.py  run_selenium.py  sell_puts.py  sell_vertical_put_spread.py
quacktrader/moneymanager/: conservative_moneymanager.py  moneymanager.py  simple_moneymanager.py
quacktrader/montecarlo/: pyproject.toml
quacktrader/montecarlo/montecarlo/: montecarlo.py  simulate.py
quacktrader/montecarlo/tests/: test_montecarlo.py
quacktrader/portfolio/: account.py  assessment.py  capm.py  deposit_account.py  investment_account.py  montecarlo.py  optimization.py  portfolio.py  revenue.py  simulate.py  tax_worksheet.py
quacktrader/riskmanager/: riskmanager.py
quacktrader/strategy/: chaikin_trend.py  mfi_oversold.py  rsi_oversold.py
quacktrader/weatherman/: forecast.py  weatherman.py
tests/: test_quacktrader.py
tests/portfolio/: debug_portfolio.py
